2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_init),
	(gnome_volume_applet_refresh):
	* applet.h:
	  Display tooltip showing current volume, based on a patch from
	  Pedro Villavicencio <pvillavi@gnome.org> (#166914).

2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_setup):
	  Some include fixes.
	* preferences.c: (gnome_volume_applet_preferences_init):
	  Fix type-ahead bug (#171367).

2005-03-29  Ryan Lortie  <desrt@desrt.ca>

	* applet.c: Use show/hide_all instead of show/hide for the
	drop-down slider.  Closes bug #168726.

2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>

	* applet.c: (flip_byte), (flip_pixel), (flip): Fix
	compiler warnings about signedness.
	* applet.h:
	* dock.c:
	* dock.h:
	* load.c:
	* preferences.c: Cleanups of headers.

2005-03-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_button):
	  Ignore clicks from outside widget. Fixes #168726.

2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* applet.c: Don't leak style while handling the change_background
	signal.  Fix adapted from Vincent Untz's fixes to various panel
	applets.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* preferences.c: (gnome_volume_applet_preferences_init): Use
	gtk_widget_size_request() instead of the deprecated
	gtk_widget_set_usize().

2005-02-09  Mark McLoughlin  <mark@skynet.ie>

	Fixes crash when we select a track with no channels.
	See Fedora bug:
	  https://bugzilla.redhat.com/beta/show_bug.cgi?id=147282
	Thanks to Neil Paris <neilparis@gmail.com> for isolating
	the problem.

	* applet.[ch]:
	(select_track), (select_element_and_track): new functions.
	(gnome_volume_applet_setup): re-work mixer/track selection so
	that we never end up with a track with no channels.
	
	* load.c: (gnome_volume_applet_factory): don't pop up an
	error dialog if we can't find a mixer here. Allow
	gnome_volume_applet_setup() to do it instead.
