@@ -1,5 +1,11 @@
 2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* applet.c: (gnome_volume_applet_toggle_mute),
+	(gnome_volume_applet_refresh), (cb_ui_event):
+	  Fix for mute misbehaviour.
+
+2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* applet.c: (gnome_volume_applet_init),
 	(gnome_volume_applet_refresh):
 	* applet.h:
